deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quanos
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: quanos
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
